documented the Maven OOM exception